added employee-dashboard project

--- a/pages/about.html
+++ b/pages/about.html
@@ -113,7 +113,7 @@
                         <p>Let's create something magical together</p>
                     </blockquote>
                     <div class="flex flex-col md:flex-row justify-center md:justify-between items-center mt-10">
-                        <a href="../assets/pdf/CV-Marija Popeska.pdf" download class="md:w-auto">
+                        <a href="../assets/pdf/CV-Marija-Popeska.pdf" download class="md:w-auto">
                             <button
                                 class="bg-[#F36F64] text-white font-bold px-6 h-10 md:w-full rounded-3xl mb-4 md:mb-0 md:mr-4">
                                 Download CV
