add employee notification system page

--- a/index.html
+++ b/index.html
@@ -127,6 +127,37 @@
 	<!-- Work -->
 	<section id="work" class="bg-white relative h-full lg:px-[300px] px-[24px] md:px-[24px] pt-1">
 		<section class="container space-y-20 mx-auto p-10 md:py-20 px-0 md:p-20 md:px-0">
+			<!-- Project Employee Notification System -->
+			<div id="employee-dashboard">
+				<a href="./pages/employee-notification-system.html">
+					<article class="flex flex-col justify-center text-center">
+						<div>
+							<h1
+								class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
+								Employee Notification System
+							</h1>
+							<p class="text-slate-600 text-[18px] md:text-[22px]">Employee Notification System: Project
+								with
+								Next.js and Tailwind CSS</p>
+						</div>
+						<div
+							class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
+							<div class="absolute inset-0 bg-black opacity-30 rounded-3xl"></div>
+							<div
+								class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+							</div>
+							<picture>
+								<source srcset="./assets/img/employee-notification-system/image_3.jpg 800w,
+												 ./assets/img/employee-notification-system/image_3.jpg 480w,
+												 ./assets/img/employee-notification-system/image_3.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
+								<img class="w-full h-full bg-center object-cover rounded-3xl"
+									src="./assets/img/employee-notification-system/image_3.jpg"
+									alt="employee-dashboard image">
+							</picture>
+						</div>
+					</article>
+				</a>
+			</div>
 			<!-- Project Employee Dashboard -->
 			<div id="employee-dashboard">
 				<a href="./pages/employee-dashboard.html">
