--- a/pages/employee-dashboard.html
+++ b/pages/employee-dashboard.html
@@ -18,8 +18,8 @@
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="627">
 	<meta property="og:url" content="https://www.marijapopeska.com">
-	<meta property="og:title" content="Dipsakus UX Design Case Study">
-	<meta property="og:description" content="Explore the UX design case study of Dipsakus, a hiking club website.">
+	<meta property="og:title" content="Employee Dashboard">
+	<meta property="og:description" content="Intern Project with SvelteKit and Tailwind CSS">
 	<title>Dipsakus UX Design Case Study</title>
 
 	<!-- =====BOX ICONS===== -->
@@ -243,7 +243,7 @@
                                              ../assets/img/employee-dashboard/components.jpg 480w,
                                              ../assets/img/employee-dashboard/components.jpg 320w"
 							sizes="(max-width: 800px) 100vw, 800px">
-						<img class="mt-10 h-full w-full cursor-zoom-in"
+						<img class="mt-10 h-[300px] md:h-full w-full cursor-zoom-in"
 							src="../assets/img/employee-dashboard/components.jpg" alt="EmployeeDashboard">
 					</picture>
 				</div>
@@ -294,8 +294,8 @@
                                              ../assets/img/employee-dashboard/cards.jpg 480w,
                                              ../assets/img/employee-dashboard/cards.jpg 320w"
 							sizes="(max-width: 800px) 100vw, 800px">
-						<img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/employee-dashboard/cards.jpg"
-							alt="EmployeeDashboard">
+						<img class="mt-10 h-[300px] md:h-full w-full cursor-zoom-in"
+							src="../assets/img/employee-dashboard/cards.jpg" alt="EmployeeDashboard">
 					</picture>
 					<h3 class="mt-10 mb-6 underline text-xl md:text-3xl font-futura lg:text-2xl text-slate-600">
 						Adding Flexibility with Props
