--- a/index.html
+++ b/index.html
@@ -80,15 +80,16 @@
 	<section id="about"
 		class="sticky top top-0 w-full h-[650px] bg-[#F36F64]  pt-[200px] pb-[200px] lg:px-[300px] md:px-[24px] px-[24px] z-0">
 		<div class="flex items-center justify-center text-center">
-			<div class=" lg:px-[300px] px-[24px] md:px-[24px]" data-aos="fade-left" data-aos-duration="700">
+			<div class="lg:px-[300px] px-[24px] md:px-[24px]" data-aos="fade-left" data-aos-duration="700">
 				<h3
 					class="mb-10 text-2xl md:text-3xl font-futura lg:text-5xl max-xl:text-4xl max-sm:text-3xl text-slate-50">
 					Hello, I'm <span>Marija Popeska</span>
 				</h3>
-				<p class="text-[18px] md:text-[22px] text-slate-50">
-					I'm a UX Designer & Frontend Developer who believes in the power of combining technology
+				<p class="text-[18px] md:text-[22px] text-slate-50 w-3xl">
+					I'm a UX Designer & Developer who believes in the power of combining technology
 					and design to create something truly magical
 				</p>
+
 				<div class="z-50 relative">
 					<div class="text-[18px] mt-16 md:mt-20 mb-3 md:text-[22px] text-slate-50">
 						Get in touch
