--- a/pages/about.html
+++ b/pages/about.html
@@ -73,7 +73,7 @@
                         class="mb-10 flex justify-center items-center text-center space-y-6 mt-6 text-base md:text-xl text-slate-600">
                         I'm Marija Popeska, a friendly and
                         collaborative designer</p>
-                    <picture>
+                    <picture class="flex justify-center">
                         <source srcset="../assets/img/hello.jpg 800w,
                                             ../assets/img/hello.jpg 480w,
                                             ../assets/img/hello.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
