--- a/pages/employee-dashboard.html
+++ b/pages/employee-dashboard.html
@@ -81,12 +81,12 @@
 				worked closely with a team
 				of talented professionals to develop impactful digital solutions. This experience provided
 				me with invaluable insight into collaborative design and development processes.</p>
-			<picture class="fullscreen-container">
+			<picture class="flex justify-center">
 				<source srcset="../assets/img/employee-dashboard/presentation.jpg 800w,
                                              ../assets/img/employee-dashboard/presentation.jpg 480w,
                                              ../assets/img/employee-dashboard/presentation.jpg 320w"
 					sizes="(max-width: 800px) 100vw, 800px">
-				<img class="mt-10 h-[300px] md:h-[1000px] w-full object-cover cursor-zoom-in"
+				<img class="mt-10 h-[300px] md:h-[1000px] w-full 2xl:w-fit object-cover cursor-zoom-in"
 					src="../assets/img/employee-dashboard/presentation.jpg" alt="EmployeeDashboard">
 			</picture>
 		</div>
@@ -135,12 +135,12 @@
 					during development.
 				</li>
 			</ol>
-			<picture class="fullscreen-container">
+			<picture class="flex justify-center">
 				<source srcset="../assets/img/employee-dashboard/tools.jpg 800w,
                                              ../assets/img/employee-dashboard/tools.jpg 480w,
                                              ../assets/img/employee-dashboard/tools.jpg 320w"
 					sizes="(max-width: 800px) 100vw, 800px">
-				<img class="mt-10 h-[300px] md:h-[700px] w-full cursor-zoom-in"
+				<img class="mt-10 h-[300px] md:h-[700px] w-full 2xl:w-fit cursor-zoom-in"
 					src="../assets/img/employee-dashboard/tools.jpg" alt="EmployeeDashboard">
 			</picture>
 		</div>
@@ -155,7 +155,7 @@
 
 				The core idea behind the Employee Dashboard is to make goal management and performance tracking
 				easier for both employees and their team leaders.</p>
-			<picture class="fullscreen-container">
+			<picture class="flex justify-center">
 				<source srcset="../assets/img/employee-dashboard/goals-overview.jpg 800w,
                                              ../assets/img/employee-dashboard/goals-overview.jpg 480w,
                                              ../assets/img/employee-dashboard/goals-overview.jpg 320w"
@@ -238,12 +238,12 @@
 						specific elements to showcase their functionality and visual design within the overall
 						dashboard.
 					</p>
-					<picture class="fullscreen-container">
+					<picture class="flex justify-center">
 						<source srcset="../assets/img/employee-dashboard/components.jpg 800w,
                                              ../assets/img/employee-dashboard/components.jpg 480w,
                                              ../assets/img/employee-dashboard/components.jpg 320w"
 							sizes="(max-width: 800px) 100vw, 800px">
-						<img class="mt-10 h-[300px] md:h-full w-full cursor-zoom-in"
+						<img class="mt-10 h-[300px] md:h-full w-full 2xl:w-fit cursor-zoom-in"
 							src="../assets/img/employee-dashboard/components.jpg" alt="EmployeeDashboard">
 					</picture>
 				</div>
@@ -289,12 +289,12 @@
 						in
 						action, showcasing their different states and adaptations.
 					</p>
-					<picture class="fullscreen-container">
+					<picture class="flex justify-center">
 						<source srcset="../assets/img/employee-dashboard/cards.jpg 800w,
                                              ../assets/img/employee-dashboard/cards.jpg 480w,
                                              ../assets/img/employee-dashboard/cards.jpg 320w"
 							sizes="(max-width: 800px) 100vw, 800px">
-						<img class="mt-10 h-[300px] md:h-full w-full cursor-zoom-in"
+						<img class="mt-10 h-[300px] md:h-full w-full 2xl:w-fit cursor-zoom-in"
 							src="../assets/img/employee-dashboard/cards.jpg" alt="EmployeeDashboard">
 					</picture>
 					<h3 class="mt-10 mb-6 underline text-xl md:text-3xl font-futura lg:text-2xl text-slate-600">
