--- a/pages/employee-notification-system.html
+++ b/pages/employee-notification-system.html
@@ -82,7 +82,7 @@
                 to access essential information and resources. This initiative aimed to streamline internal
                 communication, improve efficiency, and modernize how court employees interact with institutional updates
                 and tools.</p>
-            <picture class="fullscreen-container">
+            <picture class="flex justify-center mx-auto">
                 <source srcset="../assets/img/employee-notification-system/image_3.jpg 800w,
                                              ../assets/img/employee-notification-system/image_3.jpg 480w,
                                              ../assets/img/employee-notification-system/image_3.jpg 320w"
@@ -130,7 +130,7 @@
                     by high-fidelity designs.
                 </li>
             </ol>
-            <picture class="flex justify-center mt-10">
+            <picture class="flex justify-center mx-auto mt-10 w1-3xl">
                 <source srcset="../assets/img/employee-notification-system/image_4.jpg 800w,
                                                  ../assets/img/employee-notification-system/image_4.jpg 480w,
                                                  ../assets/img/employee-notification-system/image_4.jpg 320w"
@@ -138,7 +138,7 @@
                 <img class="h-full md:h-[600px] w-fit cursor-zoom-in"
                     src="../assets/img/employee-notification-system/image_4.jpg" alt="EmployeeDashboard">
             </picture>
-            <picture class="flex justify-center mt-10">
+            <picture class="flex justify-center mx-auto mt-10 w1-3xl border">
                 <source srcset="../assets/img/employee-notification-system/Wireframe_1.jpg 800w,
                                                  ../assets/img/employee-notification-system/Wireframe_1.jpg 480w,
                                                  ../assets/img/employee-notification-system/Wireframe_1.jpg 320w"
@@ -146,7 +146,7 @@
                 <img class="h-full md:h-full w-fit cursor-zoom-in"
                     src="../assets/img/employee-notification-system/Wireframe_1.jpg" alt="EmployeeDashboard">
             </picture>
-            <picture class="flex justify-center mt-10">
+            <picture class="flex justify-center mx-auto mt-10 w1-3xl border">
                 <source srcset="../assets/img/employee-notification-system/Wireframe_2.jpg 800w,
                                                  ../assets/img/employee-notification-system/Wireframe_2.jpg 480w,
                                                  ../assets/img/employee-notification-system/Wireframe_2.jpg 320w"
@@ -181,7 +181,7 @@
                 <li>Efficient styling with Tailwind CSS for a clean and organized layout.</li>
                 <li>Added interactive features to enhance the user experience.</li>
             </ol>
-            <picture class="flex justify-center mt-10">
+            <picture class="flex justify-center mx-auto w1-3xl mt-10 border">
                 <source srcset="../assets/img/employee-notification-system/image_1.jpg 800w,
                                                  ../assets/img/employee-notification-system/image_1.jpg 480w,
                                                  ../assets/img/employee-notification-system/image_1.jpg 320w"
@@ -189,7 +189,7 @@
                 <img class="h-full md:h-full w-fit cursor-zoom-in"
                     src="../assets/img/employee-notification-system/image_1.jpg" alt="EmployeeDashboard">
             </picture>
-            <picture class="flex justify-center mt-10">
+            <picture class="flex justify-center mt-10 mx-auto w1-3xl border">
                 <source srcset="../assets/img/employee-notification-system/image_2.jpg 800w,
                                                  ../assets/img/employee-notification-system/image_2.jpg 480w,
                                                  ../assets/img/employee-notification-system/image_2.jpg 320w"
