--- a/pages/project-3.html
+++ b/pages/project-3.html
@@ -101,11 +101,11 @@
 
 						</p>
 					</div>
-					<picture class="fullscreen-container">
+					<picture class="flex justify-center mx-auto">
 						<source srcset="../assets/img/cinevers/cinevers.jpg 800w,
 						../assets/img/cinevers/cinevers.jpg 480w,
 						../assets/img/cinevers/cinevers.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-						<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+						<img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
 							src="../assets/img/cinevers/cinevers.jpg" alt="Final image">
 					</picture>
 				</div>
@@ -156,11 +156,11 @@
 							audience. Methods included user interviews, surveys, and competitive analysis. Key findings
 							informed the design decisions and ensured alignment with user expectations.</p>
 					</div>
-					<picture class="fullscreen-container">
+					<picture class="flex justify-center mx-auto">
 						<source srcset="../assets/img/cinevers/analyze-1.jpg 800w,
 						../assets/img/cinevers/analyze-1.jpg 480w,
 						../assets/img/cinevers/analyze-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-						<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+						<img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
 							src="../assets/img/cinevers/analyze-1.jpg" alt="Final image">
 					</picture>
 				</div>
@@ -172,11 +172,11 @@
 							represented diverse segments of the target audience, including their demographics, goals,
 							pain points, and behaviors. These personas served as a guiding framework throughout the
 							design process to create user-centric solutions.</p>
-						<picture class="fullscreen-container">
+						<picture class="flex justify-center mx-auto">
 							<source srcset="../assets/img/cinevers/user-personas.jpg 800w,
 								../assets/img/cinevers/user-personas.jpg 480w,
 								../assets/img/cinevers/user-personas.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-							<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+							<img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
 								src="../assets/img/cinevers/user-personas.jpg" alt="Final image">
 						</picture>
 					</div>
@@ -189,12 +189,12 @@
 					experience within the app. User flows were designed to ensure intuitive and seamless interactions,
 					guiding users towards their goals efficiently. Iterative refinement of user flows improved usability
 					and streamlined the user journey.</p>
-				<picture class="fullscreen-container">
+				<picture class="flex justify-center mx-auto">
 					<source srcset="../assets/img/cinevers/user-flow.jpg 800w,
 							../assets/img/cinevers/user-flow.jpg 480w,
 							../assets/img/cinevers/user-flow.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
-						src="../assets/img/cinevers/user-flow.jpg" alt="Final image">
+					<img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/cinevers/user-flow.jpg"
+						alt="Final image">
 				</picture>
 			</div>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -204,12 +204,12 @@
 					various concepts and ideas. Low-fidelity sketches were used to visualize layout structures and
 					iterate rapidly on design concepts. This phase allowed for creative exploration and alignment on
 					design direction before moving to higher fidelity mockups.</p>
-				<picture class="fullscreen-container">
+				<picture class="flex justify-center mx-auto">
 					<source srcset="../assets/img/cinevers/sketches.jpg 800w,
 								../assets/img/cinevers/sketches.jpg 480w,
 								../assets/img/cinevers/sketches.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
-						src="../assets/img/cinevers/sketches.jpg" alt="Final image">
+					<img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/cinevers/sketches.jpg"
+						alt="Final image">
 				</picture>
 			</div>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -219,18 +219,18 @@
 					thinking. The technique intends for participants to come up with eccentric ideas. Some of these
 					thoughts and ideas are crafted into original and creative solutions to problems, whereas helping to
 					spark additional ideas.</p>
-				<picture class="fullscreen-container">
+				<picture class="flex justify-center mx-auto w2-3xl">
 					<source srcset="../assets/img/cinevers/brainstorming.jpg 480w,
 										../assets/img/cinevers/brainstorming.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
 					<img class="mt-10 w-full h-full object-cover cursor-zoom-in"
 						src="../assets/img/cinevers/brainstorming.jpg" alt="Final image">
 				</picture>
-				<picture class="fullscreen-container">
+				<picture class="flex justify-center mx-auto">
 					<source srcset="../assets/img/cinevers/search-1.jpg 800w,
 									../assets/img/cinevers/search-1.jpg 480w,
 									../assets/img/cinevers/search-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
-						src="../assets/img/cinevers/search-1.jpg" alt="Final image">
+					<img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/cinevers/search-1.jpg"
+						alt="Final image">
 				</picture>
 			</div>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -252,19 +252,19 @@
 						enhance engagement.
 					</p>
 				</div>
-				<picture class="fullscreen-container">
+				<picture class="flex justify-center mx-auto">
 					<source srcset="../assets/img/cinevers/screen-1.jpg 800w,
 									../assets/img/cinevers/screen-1.jpg 480w,
 									../assets/img/cinevers/screen-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
-						src="../assets/img/cinevers/screen-1.jpg" alt="Final image">
+					<img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/cinevers/screen-1.jpg"
+						alt="Final image">
 				</picture>
-				<picture class="fullscreen-container">
+				<picture class="flex justify-center mx-auto">
 					<source srcset="../assets/img/cinevers/screen-2.jpg 800w,
 									../assets/img/cinevers/screen-2.jpg 480w,
 									../assets/img/cinevers/screen-2.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-					<img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
-						src="../assets/img/cinevers/screen-2.jpg" alt="Final image">
+					<img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/cinevers/screen-2.jpg"
+						alt="Final image">
 				</picture>
 			</div>
 			<div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
