--- a/pages/collection.html
+++ b/pages/collection.html
@@ -124,12 +124,12 @@
 
                             </p>
                         </div>
-                        <picture class="fullscreen-container">
+                        <picture class="flex justify-center mx-auto w2-3xl">
                             <source srcset="../assets/img/collection/img-2.jpg 800w,
                                             ../assets/img/collection/img-2.jpg 480w,
                                             ../assets/img/collection/img-2.jpg 320w"
                                 sizes="(max-width: 800px) 100vw, 800px">
-                            <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                            <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                                 src="../assets/img/collection/img-2.jpg" alt="Final image">
                         </picture>
                     </div>
@@ -183,20 +183,20 @@
                             <p>
                             </p>
                         </div>
-                        <picture class="fullscreen-container">
+                        <picture class="flex justify-center mx-auto w2-3xl">
                             <source srcset="../assets/img/collection/img-3.jpg 800w,
                                             ../assets/img/collection/img-3.jpg 480w,
                                             ../assets/img/collection/img-3.jpg 320w"
                                 sizes="(max-width: 800px) 100vw, 800px">
-                            <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                            <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                                 src="../assets/img/collection/img-3.jpg" alt="Final image">
                         </picture>
-                        <picture class="fullscreen-container">
+                        <picture class="flex justify-center mx-auto w2-3xl">
                             <source srcset="../assets/img/collection/img-4.jpg 800w,
                                             ../assets/img/collection/img-4.jpg 480w,
                                             ../assets/img/collection/img-4.jpg 320w"
                                 sizes="(max-width: 800px) 100vw, 800px">
-                            <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                            <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                                 src="../assets/img/collection/img-4.jpg" alt="Final image">
                         </picture>
                     </div>
@@ -241,7 +241,7 @@
                             <p>
                             </p>
                         </div>
-                        <picture class="fullscreen-container">
+                        <picture class="flex justify-center mx-auto w2-3xl">
                             <source srcset="../assets/img/collection/img-5.jpg 800w,
                                             ../assets/img/collection/img-5.jpg 480w,
                                             ../assets/img/collection/img-5.jpg 320w"
