--- a/pages/project-1.html
+++ b/pages/project-1.html
@@ -154,13 +154,13 @@
                         The interviews helped us understand what motivates users to join a hiking club, their
                         preferences for tour destinations and difficulty levels, and their expectations from the club's
                         website.</p>
-                    <picture class="fullscreen-container">
+                    <picture class="flex justify-center mx-auto w2-3xl">
                         <source srcset="../assets/img/dipsakus/questions.jpg 800w,
-                                             ../assets/img/dipsakus/questions.jpg 480w,
-                                             ../assets/img/dipsakus/questions.jpg 320w"
+                                                         ../assets/img/dipsakus/questions.jpg 480w,
+                                                         ../assets/img/dipsakus/questions.jpg 320w"
                             sizes="(max-width: 800px) 100vw, 800px">
-                        <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/questions.jpg"
-                            alt="Questions">
+                        <img class="h-full md:h-full w-full 2xl:w-fit cursor-zoom-in"
+                            src="../assets/img/dipsakus/questions.jpg" alt="Dipsakus">
                     </picture>
 
                 </div>
@@ -173,18 +173,18 @@
                             Created fictional representations of typical users, including their goals, preferences, and
                             challenges related to hiking and club membership.</p>
 
-                        <picture class="flex justify-center mx-auto">
-                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-1.jpg" srcset="../assets/img/dipsakus/user-1.jpg 800w,
-                                             ../assets/img/dipsakus/user-1.jpg 480w,
-                                             ../assets/img/dipsakus/user-1.jpg 320w"
+                        <picture class="flex justify-center mx-auto w2-3xl">
+                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-1.png" srcset="../assets/img/dipsakus/user-1.png 800w,
+                                             ../assets/img/dipsakus/user-1.png 480w,
+                                             ../assets/img/dipsakus/user-1.png 320w"
                                 sizes="(max-width: 800px) 100vw, (max-width: 480px) 50vw, 33.3vw" alt="">
-                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-2.jpg" srcset="../assets/img/dipsakus/user-2.jpg 800w,
-                                             ../assets/img/dipsakus/user-2.jpg 480w,
-                                             ../assets/img/dipsakus/user-2.jpg 320w"
+                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-2.png" srcset="../assets/img/dipsakus/user-2.png 800w,
+                                             ../assets/img/dipsakus/user-2.png 480w,
+                                             ../assets/img/dipsakus/user-2.png 320w"
                                 sizes="(max-width: 800px) 100vw, (max-width: 480px) 50vw, 33.3vw" alt="">
-                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-3.jpg" srcset="../assets/img/dipsakus/user-3.jpg 800w,
-                                             ../assets/img/dipsakus/user-3.jpg 480w,
-                                             ../assets/img/dipsakus/user-3.jpg 320w"
+                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-3.png" srcset="../assets/img/dipsakus/user-3.png 800w,
+                                             ../assets/img/dipsakus/user-3.png 480w,
+                                             ../assets/img/dipsakus/user-3.png 320w"
                                 sizes="(max-width: 800px) 100vw, (max-width: 480px) 50vw, 33.3vw" alt="">
                         </picture>
 
@@ -197,12 +197,12 @@
                                 acquisition,
                                 and
                                 service.</p>
-                            <picture class="flex justify-center fullscreen-container">
+                            <picture class="flex justify-center">
                                 <source srcset="../assets/img/dipsakus/journey-map.jpg 800w,
                                                          ../assets/img/dipsakus/journey-map.jpg 480w,
                                                          ../assets/img/dipsakus/journey-map.jpg 320w"
                                     sizes="(max-width: 800px) 100vw, 800px">
-                                <img class="mt-10 h-full w-full cursor-zoom-in"
+                                <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                                     src="../assets/img/dipsakus/journey-map.jpg" alt="Journey map">
                             </picture>
                         </div>
@@ -238,13 +238,13 @@
                     exploring various
                     layouts and features. This process helps me visualize the website's structure and functionality
                     before moving on to digital wireframes and prototypes.</p>
-                <picture class="flex justify-center fullscreen-container">
+                <picture class="flex justify-center mt-10 mx-auto w2-3xl">
                     <source srcset="../assets/img/dipsakus/sketches.jpg 800w,
-                                                 ../assets/img/dipsakus/sketches.jpg 480w,
-                                                 ../assets/img/dipsakus/sketches.jpg 320w"
+                                                         ../assets/img/dipsakus/sketches.jpg 480w,
+                                                         ../assets/img/dipsakus/sketches.jpg 320w"
                         sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/sketches.jpg"
-                        alt="Sketches">
+                    <img class="h-full md:h-full w-full 2xl:w-fit cursor-zoom-in"
+                        src="../assets/img/dipsakus/sketches.jpg" alt="Dipsakus">
                 </picture>
             </div>
             <div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -264,22 +264,22 @@
                     <li>What would they like to improve?</li>
                     <li>Does the overall design/flow meet their needs?</li>
                 </ul>
-                <picture class="flex justify-center fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/dipsakus/wireframes-1.jpg 800w,
                                                  ../assets/img/dipsakus/wireframes-1.jpg 480w,
                                                  ../assets/img/dipsakus/wireframes-1.jpg 320w"
                         sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/wireframes-1.jpg"
-                        alt="Wireframes">
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
+                        src="../assets/img/dipsakus/wireframes-1.jpg" alt="Wireframes">
                 </picture>
 
-                <picture class="flex justify-center fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/dipsakus/wireframes-2.jpg 800w,
                                                  ../assets/img/dipsakus/wireframes-2.jpg 480w,
                                                  ../assets/img/dipsakus/wireframes-2.jpg 320w"
                         sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full w-full cursor-zoom-in" src="../assets/img/dipsakus/wireframes-2.jpg"
-                        alt="Wireframes">
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
+                        src="../assets/img/dipsakus/wireframes-2.jpg" alt="Wireframes">
                 </picture>
             </div>
             <div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
@@ -293,35 +293,39 @@
                     meticulous attention to detail and adherence to responsive design principles, I aimed to provide
                     users with a cohesive and engaging experience across all devices.</p>
                 <!-- First image -->
-                <picture class="fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/dipsakus/final-1.jpg 800w,
                      ../assets/img/dipsakus/final-1.jpg 480w,
                      ../assets/img/dipsakus/final-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/final-1.jpg" alt="Final image">
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/dipsakus/final-1.jpg"
+                        alt="Final image">
                 </picture>
 
                 <!-- Second image -->
-                <picture class="fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/dipsakus/final-2.jpg 800w,
                      ../assets/img/dipsakus/final-2.jpg 480w,
                      ../assets/img/dipsakus/final-2.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/final-2.jpg" alt="Final image">
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/dipsakus/final-2.jpg"
+                        alt="Final image">
                 </picture>
 
                 <!-- Third image -->
-                <picture class="fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/dipsakus/final-3.jpg 800w,
                      ../assets/img/dipsakus/final-3.jpg 480w,
                      ../assets/img/dipsakus/final-3.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/final-3.jpg" alt="Final image">
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/dipsakus/final-3.jpg"
+                        alt="Final image">
                 </picture>
 
                 <!-- Fourth image -->
-                <picture class="fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/dipsakus/final-4.jpg 800w,
                      ../assets/img/dipsakus/final-4.jpg 480w,
                      ../assets/img/dipsakus/final-4.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/final-4.jpg" alt="Final image">
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/dipsakus/final-4.jpg"
+                        alt="Final image">
                 </picture>
                 <p class="mt-10 text-slate-600">I translated UX design concepts and wireframes into functional
                     components using Next.js and Tailwind CSS. Leveraging my frontend development skills, I implemented
@@ -334,11 +338,12 @@
                     functionality. Together, we worked as a team to bring the Dipsakus Hiking Club website to life,
                     combining UX design principles with robust frontend development techniques to deliver a seamless
                     digital experience for users.</p>
-                <picture class="fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/dipsakus/code.jpg 800w,
                          ../assets/img/dipsakus/code.jpg 480w,
                          ../assets/img/dipsakus/code.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 cursor-zoom-in" src="../assets/img/dipsakus/code.jpg" alt="Final image">
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in" src="../assets/img/dipsakus/code.jpg"
+                        alt="Final image">
                 </picture>
                 <ul class="flex gap-3 text-[#F36F64] mt-10 flex-wrap">
                     <li class="underline">Figma</li>
