--- a/pages/project-2.html
+++ b/pages/project-2.html
@@ -95,7 +95,7 @@
                             app
                             is designed to cater to your unique preferences and lifestyle.</p>
                     </div>
-                    <picture class="fullscreen-container">
+                    <picture class="flex justify-center mx-auto">
                         <source srcset="../assets/img/grocery-app/img-1.jpg 800w,
                              ../assets/img/grocery-app/img-1.jpg 480w,
                              ../assets/img/grocery-app/img-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
@@ -144,18 +144,18 @@
                             competitors' offerings, strengths, and weaknesses to glean insights that can inform your own
                             app's design and positioning.</p>
                     </div>
-                    <picture class="fullscreen-container">
+                    <picture class="flex justify-center mx-auto w2-3xl">
                         <source srcset="../assets/img/grocery-app/img-2.jpg 800w,
                              ../assets/img/grocery-app/img-2.jpg 480w,
                              ../assets/img/grocery-app/img-2.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                        <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                        <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                             src="../assets/img/grocery-app/img-2.jpg" alt="Final image">
                     </picture>
-                    <picture class="fullscreen-container">
+                    <picture class="flex justify-center mx-auto w2-3xl">
                         <source srcset="../assets/img/grocery-app/img-3.jpg 800w,
                              ../assets/img/grocery-app/img-3.jpg 480w,
                              ../assets/img/grocery-app/img-3.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                        <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                        <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                             src="../assets/img/grocery-app/img-3.jpg" alt="Final image">
                     </picture>
                     <div class="space-y-6 mt-6">
@@ -231,12 +231,12 @@
                             user base we aim to serve. Through empathetic storytelling and data-driven insights, these
                             personas help ensure that the app is tailored to meet the needs of real users in real-world
                             scenarios.</p>
-                        <picture class="flex justify-center mx-auto fullscreen-container">
+                        <picture class="flex justify-center mx-auto flex justify-center mx-auto">
                             <source srcset="../assets/img/grocery-app/user-personas.jpg 800w,
                                      ../assets/img/grocery-app/user-personas.jpg 480w,
                                      ../assets/img/grocery-app/user-personas.jpg 320w"
                                 sizes="(max-width: 800px) 100vw, 800px">
-                            <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                            <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                                 src="../assets/img/grocery-app/user-personas.jpg" alt="Final image">
                         </picture>
                     </div>
@@ -249,11 +249,11 @@
                     exploring various
                     layouts and features. This process helps me visualize the app structure and functionality
                     before moving on to digital wireframes and prototypes.</p>
-                <picture class="flex justify-center mx-auto fullscreen-container">
+                <picture class="flex justify-center mx-auto w2-3xl">
                     <source srcset="../assets/img/grocery-app/sketches.jpg 800w,
                                  ../assets/img/grocery-app/sketches.jpg 480w,
                                  ../assets/img/grocery-app/sketches.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                         src="../assets/img/grocery-app/sketches.jpg" alt="Final image">
                 </picture>
             </div>
@@ -265,12 +265,12 @@
                     fidelity and then refined into high fidelity prototypes. Prototyping these flows in high fidelity
                     allows for a detailed assessment of usability and hierarchy. Throughout the defining phase, I
                     experimented with various concepts and layouts.</p>
-                <picture class="flex justify-center mx-auto fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/grocery-app/wireframes.jpg 800w,
                                      ../assets/img/grocery-app/wireframes.jpg 480w,
                                      ../assets/img/grocery-app/wireframes.jpg 320w"
                         sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                         src="../assets/img/grocery-app/wireframes.jpg" alt="Final image">
                 </picture>
             </div>
@@ -281,12 +281,12 @@
                     features of the final solution for the grocery delivery app. Each screen is designed to prioritize
                     usability, functionality, and aesthetics, providing users with an enjoyable and efficient shopping
                     experience.</p>
-                <picture class="flex justify-center mx-auto fullscreen-container">
+                <picture class="flex justify-center mx-auto">
                     <source srcset="../assets/img/grocery-app/final-screens.jpg 800w,
                                          ../assets/img/grocery-app/final-screens.jpg 480w,
                                          ../assets/img/grocery-app/final-screens.jpg 320w"
                         sizes="(max-width: 800px) 100vw, 800px">
-                    <img class="mt-10 h-full md:h-full w-full object-cover cursor-zoom-in"
+                    <img class="mt-10 h-full w-full 2xl:w-fit cursor-zoom-in"
                         src="../assets/img/grocery-app/final-screens.jpg" alt="Final image">
                 </picture>
             </div>
