added more details to Discover phase, including research, SWOT analysis, and user insights

--- a/pages/employee-dashboard.html
+++ b/pages/employee-dashboard.html
@@ -8,19 +8,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Marija Popeska">
 	<meta name="keywords" content="ux designer, architecture, digital experience, portfolio">
-	<meta name="description" content="Explore the UX design case study of Dipsakus, a hiking club website.">
+	<meta name="description" content="Employee Dashboard: Intern Project with SvelteKit and Tailwind CSS">
 	<meta name="robots" content="index, follow">
 	<meta name="googlebot" content="index, follow">
 	<meta name="google" content="nositelinkssearchbox">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="rating" content="adult">
-	<meta property="og:image" content="../assets/img/dipsakus/unsplash_1.jpg">
+	<meta property="og:image" content="../assets/img/employee-dashboard/presentation.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="627">
 	<meta property="og:url" content="https://www.marijapopeska.com">
 	<meta property="og:title" content="Employee Dashboard">
 	<meta property="og:description" content="Intern Project with SvelteKit and Tailwind CSS">
-	<title>Dipsakus UX Design Case Study</title>
+	<title>Employee Dashboard</title>
 
 	<!-- =====BOX ICONS===== -->
 	<link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
