--- a/pages/employee-notification-system.html
+++ b/pages/employee-notification-system.html
@@ -8,18 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marija Popeska">
     <meta name="keywords" content="ux designer, architecture, digital experience, portfolio">
-    <meta name="description" content="Explore the UX design case study of Dipsakus, a hiking club website.">
+    <meta name="description" content="Notification System for Primary Court in Ohrid">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <meta name="google" content="nositelinkssearchbox">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="rating" content="adult">
-    <meta property="og:image" content="../assets/img/dipsakus/unsplash_1.jpg">
+    <meta property="og:image" content="../assets/img/employee-notification-system/image_3.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="627">
     <meta property="og:url" content="https://www.marijapopeska.com">
-    <meta property="og:title" content="Dipsakus UX Design Case Study">
-    <meta property="og:description" content="Explore the UX design case study of Dipsakus, a hiking club website.">
+    <meta property="og:title" content="Notification System for Primary Court in Ohrid">
+    <meta property="og:description" content="Notification System for Primary Court in Ohrid">
     <title>Employee Notification System</title>
 
     <!-- =====BOX ICONS===== -->
